<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".HeroDetailActivity">

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/heroes_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_detail_image"
                android:layout_width="250dp"
                android:layout_height="340dp"
                android:contentDescription="@string/heroes_name"
                android:scaleType="fitCenter"
                android:src="@drawable/ayaka" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="24dp">

                <TextView
                    style="@style/TextHeroDetail"
                    android:text="@string/heroes_element" />

                <TextView
                    android:id="@+id/tv_detail_element"
                    style="@style/TextHeroDetail"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="@string/name_element" />

                <TextView
                    style="@style/TextHeroDetail"
                    android:text="@string/heroes_build" />

                <TextView
                    android:id="@+id/tv_detail_build"
                    style="@style/TextHeroDetail"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="@string/kategori_build" />

                <TextView
                    style="@style/TextHeroDetail"
                    android:text="@string/heroes_skill" />

                <TextView
                    android:id="@+id/tv_detail_skill"
                    style="@style/TextHeroDetail"
                    android:layout_marginBottom="24dp"
                    android:textColor="@color/black"
                    tools:text="@string/normal_attack" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="16sp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:textStyle="italic"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            tools:text="@string/description" />

    </LinearLayout>

</ScrollView>